多模块项目读取

--- a/src/main/resources/templates/doc.html
+++ b/src/main/resources/templates/doc.html
@@ -43,11 +43,11 @@ private String name;
 /**
  * @author: lanyanhua
  * @date: 2020/12/20 10:21 下午
- * @Description: 配置管理
+ * @Description: {{自定义注释值}}
  */
 
 注解 classAnnotation @Api(tags) "tags"注解取值字段
-@Api(tags = "用户管理", produces = MediaType.APPLICATION_JSON_VALUE)
+@Api(tags = "{{自定义注解值}}", produces = MediaType.APPLICATION_JSON_VALUE)
 
 @Api源码
 @Target({ElementType.TYPE})
