--- a/src/main/resources/templates/env/envAddTemplate.html
+++ b/src/main/resources/templates/env/envAddTemplate.html
@@ -25,13 +25,13 @@
     <div class="layui-form-item">
         <label class="layui-form-label">使用项目端口</label>
         <div class="layui-input-inline">
-            <input type="checkbox" name="isPort" lay-skin="switch" >
+            <input type="checkbox" name="isPort" lay-skin="switch" lay-filter="checkbox" >
         </div>
     </div>
     <div class="layui-form-item">
         <label class="layui-form-label">使用项目路径</label>
         <div class="layui-input-inline">
-            <input type="checkbox" name="isContextPath" lay-skin="switch" >
+            <input type="checkbox" name="isContextPath" lay-skin="switch" lay-filter="checkbox" >
         </div>
     </div>
     <div class="layui-form-item">
