--- a/src/main/resources/templates/project/projectAddTemplate.html
+++ b/src/main/resources/templates/project/projectAddTemplate.html
@@ -18,7 +18,7 @@
         <label class="layui-form-label">分支名称</label>
         <div class="layui-input-block">
             <input type="text" name="branchName" value="" required
-                   lay-verify="required" autocomplete="off" class="layui-input">
+                   autocomplete="off" class="layui-input">
         </div>
     </div>
     <div class="layui-form-item">
