--- a/src/main/resources/templates/steps/steps.html
+++ b/src/main/resources/templates/steps/steps.html
@@ -9,6 +9,7 @@
     <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" type="text/css"
           th:href="@{/layui/css/layui.css}">
+    <link rel="stylesheet" th:href="@{/layui/nprogress/nprogress.css}">
     <style type="text/css">
         #steps {
             width: 95%;
