--- a/src/main/resources/templates/git/gitTemplate.html
+++ b/src/main/resources/templates/git/gitTemplate.html
@@ -3,27 +3,22 @@
         <div class="layui-form-item">
             <label class="layui-form-label">本地仓库地址</label>
             <div class="layui-input-block">
-                <input type="text" name="repositoryPath" value="" required
+                <input type="text" name="repositoryPath" value="" readonly
                        lay-verify="required" autocomplete="off" class="layui-input">
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">用户名</label>
             <div class="layui-input-block">
-                <input type="text" name="username" value="" required
+                <input type="text" name="username" value="" readonly
                        lay-verify="required" autocomplete="off" class="layui-input">
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">密码</label>
             <div class="layui-input-block">
-                <input type="text" name="password" value="" required
+                <input type="password" name="password" value="" readonly
                        lay-verify="required" autocomplete="off" class="layui-input">
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <div class="layui-input-block">
-                <button class="layui-btn" lay-submit lay-filter="gitFormBtn">保存</button>
             </div>
         </div>
     </form>
