--- a/src/main/resources/templates/manage.html
+++ b/src/main/resources/templates/manage.html
@@ -1,7 +1,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <title id="title">lan-code-api</title>
+    <title id="title">gorgeous-doc</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport"
@@ -18,7 +18,7 @@
     <div class="layui-layout layui-layout-admin">
         <div class="layui-header">
             <div class="layui-logo">
-                <span style="font-size: 22px;color: #fff">lan-code-api</span>
+                <span style="font-size: 22px;color: #fff">gorgeous-doc</span>
             </div>
         </div>
         <div class="layui-side layui-bg-black">
