--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -1,7 +1,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <title id="title">lan-code-api</title>
+    <title id="title">gorgeous-doc</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport"
