--- a/src/main/resources/templates/api/apiTemplate.html
+++ b/src/main/resources/templates/api/apiTemplate.html
@@ -2,12 +2,22 @@
     <div class="api-tab-content api-tab-content-id-{{d.id}} " api-id="{{d.id}}">
         <table class="layui-table" lay-size="sm">
             <tr>
-                <td width="10%"><b>接口类型</b></td>
-                <td class="apiType">{{ApiType[d.api.type]}}</td>
-            </tr>
-            <tr>
                 <td><b>方法名</b></td>
                 <td class="api-method">{{d.api.method}}</td>
+            </tr>
+            <tr>
+                <td width="10%"><b>接口类型</b></td>
+                <td class="apiType">{{ApiType[d.api.type]}}
+
+                    <select>
+                        <option value="GET">GET</option>
+                        <option value="POST">POST</option>
+                        <option value="PUT">PUT</option>
+                        <option value="DELETE">DELETE</option>
+                    </select>
+                    <input value="{{getPath(d.api.path)}}"/>
+                </td>
+
             </tr>
             <tr>
                 <td><b>接口地址</b></td>
@@ -24,57 +34,7 @@
             {{# }) }}
 
         </table>
-        <div class="layui-tab layui-tab-brief" lay-filter="tab-out-param">
-            <ul class="layui-tab-title">
-                <li class="layui-this">输出参数</li>
-                <li>JSON格式</li>
-            </ul>
-            <div class="layui-tab-content">
-                <div class="layui-tab-item layui-show">
-                    <table class="layui-table" lay-size="sm">
-                        <thead>
-                        <th width="10%">类型</th>
-                        <th>描述</th>
-                        </thead>
-                        <tr>
-                            {{# let op = d.api.apiParamList.find(i=>i.type==2); }}
-                            {{# if(op != null){ }}
-                            <td>{{op.paramName}}</td>
-                            <td>{{op.paramDescribe||''}}</td>
-                            {{# } else{ }}
-                            <td colspan="3">无</td>
-                            {{# } }}
-                        </tr>
-                    </table>
-                    {{# d.typeList.filter(i=>i.type == 2 && i.classFieldList).forEach(v=>{ }}
-                    <table class="layui-table" lay-size="sm">
-                        <thead>
-                        <tr>
-                            {{# let classDesc = v.className+ (v.classDescribe!=null ? '：'+v.classDescribe : '');}}
-                            <th colspan="3">{{classDesc}}</th>
-                        </tr>
-                        <tr>
-                            <th width="10%">参数</th>
-                            <th width="10%">类型</th>
-                            <th>描述</th>
-                        </tr>
-                        </thead>
-                        {{# $.each(v.classFieldList,(i,v)=>{ }}
-                        <tr>
-                            <td>{{v.paramName}}</td>
-                            <td>{{v.type}}</td>
-                            <td>{{v.paramDescribe}}</td>
-                        </tr>
-                        {{# }) }}
-                    </table>
-                    {{# }) }}
-                </div>
-                {{# let typeJsonObj =(d.typeList.find(i=>i.type == 2&& i.typeJson )||{}); }}
-                <div class="layui-tab-item">
-                    <textarea class="json-text">{{formatJson1(typeJsonObj.typeJson)}}</textarea>
-                </div>
-            </div>
-        </div>
+
         请求参数
         <hr>
         <table class="layui-table" lay-size="sm">
@@ -141,7 +101,7 @@
             {{# }) }}
         </table>
         {{# }) }}
-        {{# typeJsonObj = d.typeList.find(i=>i.type == 1&& i.paramMode == ParamMode.json && i.typeJson); }}
+        {{# let typeJsonObj = d.typeList.find(i=>i.type == 1&& i.paramMode == ParamMode.json && i.typeJson); }}
         {{# if(typeJsonObj){ }}
         <table class="layui-table" lay-size="sm">
             <thead>
@@ -154,6 +114,7 @@
             </tr>
         </table>
         {{# } }}
+
         <hr>
         <button class="layui-btn" lay-filter="apiFormBtn" onclick="commitApi({{d.id}})">提交</button>
         <div class="api-response layui-hide">
@@ -170,6 +131,58 @@
                     <td><textarea class="json-text response-show"></textarea></td>
                 </tr>
             </table>
+        </div>
+        <hr>
+        <div class="layui-tab layui-tab-brief" lay-filter="tab-out-param">
+            <ul class="layui-tab-title">
+                <li class="layui-this">输出参数</li>
+                <li>JSON格式</li>
+            </ul>
+            <div class="layui-tab-content">
+                <div class="layui-tab-item layui-show">
+                    <table class="layui-table" lay-size="sm">
+                        <thead>
+                        <th width="10%">类型</th>
+                        <th>描述</th>
+                        </thead>
+                        <tr>
+                            {{# let op = d.api.apiParamList.find(i=>i.type==2); }}
+                            {{# if(op != null){ }}
+                            <td>{{op.paramName}}</td>
+                            <td>{{op.paramDescribe||''}}</td>
+                            {{# } else{ }}
+                            <td colspan="3">无</td>
+                            {{# } }}
+                        </tr>
+                    </table>
+                    {{# d.typeList.filter(i=>i.type == 2 && i.classFieldList).forEach(v=>{ }}
+                    <table class="layui-table" lay-size="sm">
+                        <thead>
+                        <tr>
+                            {{# let classDesc = v.className+ (v.classDescribe!=null ? '：'+v.classDescribe : '');}}
+                            <th colspan="3">{{classDesc}}</th>
+                        </tr>
+                        <tr>
+                            <th width="10%">参数</th>
+                            <th width="10%">类型</th>
+                            <th>描述</th>
+                        </tr>
+                        </thead>
+                        {{# $.each(v.classFieldList,(i,v)=>{ }}
+                        <tr>
+                            <td>{{v.paramName}}</td>
+                            <td>{{v.type}}</td>
+                            <td>{{v.paramDescribe}}</td>
+                        </tr>
+                        {{# }) }}
+                    </table>
+                    {{# }) }}
+                </div>
+                {{#  typeJsonObj =(d.typeList.find(i=>i.type == 2&& i.typeJson )||{}); }}
+                <div class="layui-tab-item">
+                    <textarea class="json-text">{{formatJson1(typeJsonObj.typeJson)}}</textarea>
+                </div>
+            </div>
         </div>
     </div>
 </script>
