--- a/src/main/resources/templates/menu/switchTemplate.html
+++ b/src/main/resources/templates/menu/switchTemplate.html
@@ -25,7 +25,7 @@
                 </select>
             </div>
         </div>
-        环境
+        全局环境
         <hr>
         <div class="layui-form-item">
             <label class="layui-form-label">名称</label>
